--- a/k8s/kustomization.yaml
+++ b/k8s/kustomization.yaml
@@ -6,7 +6,7 @@ metadata:
 spec:
   project: default
   source:
-    repoURL: https://github.com/myorg/my-api
+    repoURL: https://github.com/mariokuraoka/myapp.git
     targetRevision: HEAD
     path: k8s
   destination:
