--- a/k8s/deployment.yaml
+++ b/k8s/deployment.yaml
@@ -16,7 +16,7 @@ spec:
     spec:
       containers:
       - name: my-api
-        image: my-registry/my-api:latest
+        image: kuraoka/my-api:latest
         ports:
         - containerPort: 3000
         env:
