--- a/k8s/myapp.yaml
+++ b/k8s/myapp.yaml
@@ -7,7 +7,7 @@ spec:
   project: default
   source:
     repoURL: https://github.com/mariokuraoka/myapp.git
-    targetRevision: HEAD
+    targetRevision: master
     path: k8s
   destination:
     server: https://kubernetes.default.svc
