--- a/k8s/service.yaml
+++ b/k8s/service.yaml
@@ -2,10 +2,14 @@ apiVersion: v1
 kind: Service
 metadata:
   name: my-api
+  labels:
+    app: my-api
 spec:
   selector:
     app: my-api
   ports:
-  - port: 80
+  - protocol: TCP
+    port: 80
     targetPort: 3000
-  type: ClusterIP  # or LoadBalancer for external access
+    name: http
+  type: ClusterIP
