--- a/k8s/deployment.yaml
+++ b/k8s/deployment.yaml
@@ -37,7 +37,7 @@ spec:
           periodSeconds: 10
         readinessProbe:
           httpGet:
-            path: /
+            path: /health
             port: 3000
           initialDelaySeconds: 5
           periodSeconds: 5
